--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@ body{
    font-family: 'Jomolhari', serif;
 }
 .background-color{
-    background-color: #202235;
+    background-color: #0F172A;
     color: white;
 }
 .text-color{
-    color:#F64B20
+    color:#3CBDE3
 }
 .primary-text{
     text-decoration: underline;
@@ -23,3 +23,12 @@ body{
     background-color:#F64B20 ;
     transition: .5s;
 } */
+.flex{
+    display: flex;
+}
+.skill-text-color{
+    color: #202235;
+}
+.border-color{
+   border-color: #3CBDE3;
+}
